--- a/Vuex/src/index.html
+++ b/Vuex/src/index.html
@@ -17,13 +17,10 @@
   </body>
 </html>
 <style>
-  body {
+  body, html {
     height: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #222222;
-  }
-  html {
-    height: 100%;
   }
   ::-webkit-scrollbar {
     display: none;
